native~/displayxr_xrprovider/displayxr_provider_session.h

/// Display geometry surfaced from XR_EXT_display_info (for C# / logging).
typedef struct DxrProvDisplayInfo {
	float    width_m, height_m;          ///< Physical display size (meters).
	uint32_t pixel_width, pixel_height;  ///< Display pixel dimensions.
	float    nominal_x, nominal_y, nominal_z; ///< Nominal viewer position.
	float    scale_x, scale_y;           ///< Recommended per-view scale.
	int      is_valid;
} DxrProvDisplayInfo;
/// One enumerated rendering mode surfaced to C# (XrDisplayRenderingModeInfoEXT).
typedef struct DxrProvModeInfo {
	uint32_t mode_index;
	uint32_t view_count;
	uint32_t tile_columns, tile_rows;
	uint32_t view_width_px, view_height_px;
	float    view_scale_x, view_scale_y;
	int      hardware_display_3d;
	int      is_active;
	int      is_requestable;
	char     name[64];
} DxrProvModeInfo;
/// Whether the session is currently running.
DISPLAYXR_EXPORT int  dxr_prov_session_is_running(void);
/// Render mode gate (#166 task #8). Set from C# BEFORE the session starts:
/// 1 = Single-Pass-Instanced (URP+Win+D3D12), 0 = MultiPass (BiRP/other — SPI
/// renders opaque geometry wrong on BiRP). Default (unset) = SPI, preserving the
/// pre-gating behavior. Preserved across the session_start reset.
DISPLAYXR_EXPORT void dxr_prov_set_single_pass(int enable);
/// Transparent-background request (#166 Phase A). Set from C# BEFORE the session
/// starts: 1 = opt the session into a transparent background (ALPHA_BLEND env
/// blend mode + transparentBackgroundEnabled on the win32 binding) so the runtime's
/// DComp overlay composites the woven 3D over the desktop with per-pixel alpha.
/// The opt-in only takes effect if the runtime advertises ALPHA_BLEND (probed in
/// session_start). Preserved across the session_start reset (like single_pass).
DISPLAYXR_EXPORT void dxr_prov_set_transparent_background(int enable);
/// Set the single 3D-zone rect (client-window px, top-left origin) the runtime
/// frames the Kooima 3D into (#166 Phase B). The locate chains XrDisplayZoneEXT in
/// front of the view-rig and submit chains the same zone on the projection layer;
/// the swapchain is sized to the zone's recommended view size. w<=0||h<=0 clears
/// (full-window framing). Requires the runtime to advertise XR_EXT_display_zones.
/// Seed BEFORE the session starts (like the hook SeedLaunchZone) for born-zone-sized.
DISPLAYXR_EXPORT void dxr_prov_set_3d_zone_rect(int32_t x, int32_t y, int32_t w, int32_t h);
/// Clear the 3D-zone rect (revert to full-window framing).
DISPLAYXR_EXPORT void dxr_prov_clear_3d_zone(void);
// ---- Multiple 3D zones (#166 Phase B2) --------------------------------------
// index 0 = the primary zone (== dxr_prov_set_3d_zone_rect); index>=1 = extra
// zones, each with its own zone-sized swapchain + bridge + render pass. Total 3D
// zones <= PS_MAX_ZONES (4, Unity's render-pass cap). Seed BEFORE session start.

/// Set the total number of 3D zones (1 primary + extras). 0/1 → no extra zones.
DISPLAYXR_EXPORT void dxr_prov_set_zone_count(uint32_t total_3d_zones);
/// Set zone `index`'s rect (client-window px). index 0 → primary; >=1 → extra.
DISPLAYXR_EXPORT void dxr_prov_set_zone(uint32_t index, uint32_t zone_id,
                                        int32_t x, int32_t y, int32_t w, int32_t h);
/// Local2D layer (#166 Phase B): lazily create the provider's Local2D overlay
/// swapchain + cross-device bridge sized to w×h and return the Unity-device handle
/// of the bridge. C# (DisplayXRLocal2D) Graphics.CopyTexture's its canvas RT into it
/// each frame; the provider submits an XrCompositionLayerLocal2DEXT at the pixel
/// rect. Mirrors dxr_prov_get_wsui_bridge. *out_ptr = NULL when no session running.
DISPLAYXR_EXPORT void dxr_prov_get_local2d_bridge(uint32_t w, uint32_t h,
                                                  void **out_ptr, uint32_t *out_w, uint32_t *out_h);
/// Set the Local2D dest rect in client-window PIXELS (post-DPI). w<=0||h<=0 clears
/// (layer inactive). Cheap; safe to call every frame.
DISPLAYXR_EXPORT void dxr_prov_set_local2d_rect(int32_t x, int32_t y, int32_t w, int32_t h);
/// Per-eye foreground-clip data (#166 Phase B): the eye's foreground far (view-space
/// display-plane distance in world units — display rig = |rig-local eye Z|, camera
/// rig = convergence distance) + the eye WORLD position (Unity coords). C#
/// (DisplayXRDisplay) publishes these to the URP DisplayXR/ForegroundClipURP globals
/// (_DXRForegroundFar / _DXREyePosL/R), since DisplayXRFeature.GetStereoMatrices —
/// the hook-path source — is inert in provider mode.
DISPLAYXR_EXPORT void dxr_prov_get_eye_clip(uint32_t eye, float *out_far,
                                            float *out_ex, float *out_ey, float *out_ez);
// ---- Tunables / pose (pushed from the rig via C#, mirrors the hook path) -----

/// Set the stereo rig tunables. Full signature mirrors
/// displayxr_standalone_set_tunables so DisplayXRDisplay (display-centric) and
/// DisplayXRCamera (camera-centric) both drive the provider:
///   - display-centric (camera_centric=0): uses virtual_display_height, ipd,
///     parallax, perspective → chained as XrDisplayRigEXT.
///   - camera-centric  (camera_centric=1): uses inv_convergence_distance,
///     fov_override (= tan(vFov/2)), ipd, parallax → chained as XrCameraRigEXT.
/// near_z/far_z are owned by Unity's projection (not the rig descriptor); stored
/// but unused, matching the standalone. Scale-as-zoom is folded into
/// virtual_display_height / inv_convergence_distance on the C# side (the rig's
/// lossyScale), again matching the standalone — the native side ignores scale.
DISPLAYXR_EXPORT void dxr_prov_set_tunables(float ipd_factor, float parallax_factor,
                           float perspective_factor, float virtual_display_height,
                           float inv_convergence_distance, float fov_override,
                           float near_z, float far_z, int camera_centric);
/// Set the rig pose (parent/scene transform). Coordinates are Unity world
/// (left-hand, +Z forward); the native side converts to OpenXR (right-hand,
/// -Z forward) — negate position Z, negate quaternion X/Y — matching the
/// standalone / hook convention. enabled=0 reverts to the identity rig pose.
DISPLAYXR_EXPORT void dxr_prov_set_display_pose(float px, float py, float pz,
                               float ox, float oy, float oz, float ow,
                               int enabled);
// ---- Queries ----------------------------------------------------------------

/// Display info surfaced from XR_EXT_display_info.
DISPLAYXR_EXPORT void dxr_prov_get_display_info(DxrProvDisplayInfo *out_info);
/// The active per-view RENDER rect this frame = window(overlay client) ×
/// active-mode scaleXY, clamped to the worst-case swapchain (ADR-010). The
/// provider sets renderParams[eye].viewportRect to the normalized sub-rect
/// (w/sc_width, h/sc_height) so Unity renders only this sub-region, and submits
/// each view's imageRect.extent = {w, h}. Re-derived every frame (live resize).
DISPLAYXR_EXPORT void dxr_prov_get_render_rect(uint32_t *out_w, uint32_t *out_h);
/// Window-space UI (HUD) layer (#67/#166): lazily create the provider's wsui
/// overlay swapchain + cross-device bridge sized to w×h and return the Unity-device
/// handle of the bridge. C# (DisplayXRWindowSpaceUI) Graphics.CopyTexture's its
/// canvas RT into it each frame; the provider submits the wsui composition layer.
/// Returns *out_ptr = NULL when no session is running.
DISPLAYXR_EXPORT void dxr_prov_get_wsui_bridge(uint32_t w, uint32_t h,
                                               void **out_ptr, uint32_t *out_w, uint32_t *out_h);
// ---- Rendering modes (XR_EXT_display_info) ----------------------------------

/// Number of enumerated rendering modes.
DISPLAYXR_EXPORT uint32_t dxr_prov_get_mode_count(void);
/// Copy out one enumerated mode (0..count-1). Returns 1 on success.
DISPLAYXR_EXPORT int  dxr_prov_get_mode_info(uint32_t index, DxrProvModeInfo *out_info);
/// modeIndex of the currently active mode (isActive), or 0 if unknown.
DISPLAYXR_EXPORT uint32_t dxr_prov_get_active_mode_index(void);
/// Request a vendor rendering mode by modeIndex (xrRequestDisplayRenderingModeEXT).
/// Returns 1 on XR_SUCCEEDED.
DISPLAYXR_EXPORT int  dxr_prov_request_rendering_mode(uint32_t mode_index);
/// Request the hardware 2D/3D display state (xrRequestDisplayModeEXT). mode3d=1
/// → XR_DISPLAY_MODE_3D_EXT, 0 → 2D. Returns 1 on XR_SUCCEEDED.
DISPLAYXR_EXPORT int  dxr_prov_request_display_mode(int mode3d);
/// Request the eye-tracking mode (xrRequestEyeTrackingModeEXT). manual=1 →
/// MANUAL, 0 → MANAGED. Returns 1 on XR_SUCCEEDED (0 if unsupported/unresolved).
DISPLAYXR_EXPORT int  dxr_prov_set_eye_tracking_mode(int manual);
// ---- Event consumption (atomic read-and-clear; pumped by dxr_prov_poll_events) --

/// Returns 1 once after a XrEventDataRenderingModeChangedEXT, filling the
/// previous/current modeIndex; 0 otherwise. The native side has already
/// re-enumerated modes + re-derived tiling/resolution by the time this returns 1.
DISPLAYXR_EXPORT int  dxr_prov_consume_mode_changed(uint32_t *prev_index, uint32_t *cur_index);
/// Returns 1 once after a XrEventDataHardwareDisplayStateChangedEXT, filling the
/// new hardwareDisplay3D state; 0 otherwise.
DISPLAYXR_EXPORT int  dxr_prov_consume_hw_state_changed(int *hw3d);
/// Returns 1 once after a XrEventDataEyeTrackingStateChangedEXT, filling the new
/// isTracking state and activeMode (0=MANAGED, 1=MANUAL); 0 otherwise.
DISPLAYXR_EXPORT int  dxr_prov_consume_eye_tracking_changed(int *is_tracking, int *active_mode);